jilles      2006/12/05 00:12:47 UTC	(20061205-7315)
  Log:
  Delete access list when deleting an account.
  

  Changes:	Modified:
  +4 -0		trunk/src/account.c (File Modified) 


jilles      2006/11/30 01:35:29 UTC	(20061130-7313)
  Log:
  operserv uptime: show both account and nick count and label
  them properly; if nickname ownership is disabled, nick
  count is not shown
  

  Changes:	Modified:
  +3 -1		trunk/modules/operserv/uptime.c (File Modified) 


jilles      2006/11/30 01:26:09 UTC	(20061130-7311)
  Log:
  New motd replacement &mynicks&, number of registered
  nicknames. Always zero if nickname ownership is disabled.
  

  Changes:	Modified:
  +6 -3		trunk/src/ptasks.c (File Modified) 


jilles      2006/11/29 17:43:12 UTC	(20061129-7309)
  Log:
  nickserv group: don't allow registering a UID
  

  Changes:	Modified:
  +6 -0		trunk/modules/nickserv/group.c (File Modified) 


jilles      2006/11/29 00:47:32 UTC	(20061129-7307)
  Log:
  ircnet: fix SAVE processing
  

  Changes:	Modified:
  +1 -1		trunk/protocol/ircnet.c (File Modified) 


jilles      2006/11/27 23:56:16 UTC	(20061127-7305)
  Log:
  Convert xop commands to sourceinfo more fully.
  

  Changes:	Modified:
  +45 -45	trunk/modules/chanserv/xop.c (File Modified) 


jilles      2006/11/27 10:53:46 UTC	(20061127-7301)
  Log:
  Update release notes.
  

  Changes:	Modified:
  +12 -0	trunk/doc/RELEASE (File Modified) 


jilles      2006/11/27 10:30:15 UTC	(20061127-7299)
  Log:
  Add 't' version letter for chansvs::changets.
  

  Changes:	Modified:
  +1 -0		trunk/doc/VERSION_LETTERS (File Modified) 
  +2 -1		trunk/protocol/inspircd10.c (File Modified) 
  +2 -1		trunk/protocol/inspircd11.c (File Modified) 
  +2 -1		trunk/src/ctcp-common.c (File Modified) 
  +2 -1		trunk/src/ptasks.c (File Modified) 


jilles      2006/11/27 10:27:15 UTC	(20061127-7297)
  Log:
  Fix 'd' version letter for log system changes.
  

  Changes:	Modified:
  +1 -1		trunk/protocol/inspircd10.c (File Modified) 